# FactorMining

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  pyproject.toml  pytest.ini  run_pipeline.py
.github/workflows/: ci.yml
config/: default.yaml  production.yaml  real_optim.yaml  smoke_real.yaml
scripts/: audit_check.py  generate_synthetic_data.py  plot_top25.py  probe_data_availability.py  profile_math.py
src/factor_mining/: cli.py
src/factor_mining/backtest/: metrics.py  portfolio.py  walk_forward.py
src/factor_mining/core/: chromosome.py  config.py  exceptions.py  interfaces.py  types.py
src/factor_mining/data/: binance_funding.py  binance_ohlcv.py  binance_taker.py  bybit_ls_ratio.py  bybit_open_interest.py  cache.py  cleaner.py  coingecko_client.py  interfaces.py  loader.py
src/factor_mining/engine/: elitism.py  nsga2.py  runner.py  selection.py
src/factor_mining/factors/: funding.py  interfaces.py  liquidity.py  ls_ratio.py  momentum.py  open_interest.py  primitives.py  registry.py  size.py  skewness.py  taker_flow.py  transforms.py  volatility.py
src/factor_mining/fitness/: composite.py  diversity.py  interfaces.py  lookahead_guard.py  rank_ic.py  stability.py
src/factor_mining/gp/: bloat_control.py  compiler.py  operators.py  primitives.py  subtree_cache.py  typed_pset.py
src/factor_mining/reporting/: csv_export.py  pareto_export.py  plots.py
src/factor_mining/validation/: bootstrap_ic.py  cpcv.py  deflated_sharpe.py  is_oos_gap_alert.py  jaccard_stability.py  permutation_test.py
tests/: conftest.py
tests/fixtures/: synthetic_panel.pkl
tests/integration/: conftest.py  test_backtest_integration.py  test_data_endpoints.py  test_data_pipeline.py  test_factors_integration.py  test_full_pipeline.py  test_gp_engine.py  test_pipeline_e2e.py  test_validation_integration.py
tests/unit/backtest/: test_backtest.py
tests/unit/core/: test_config.py  test_types.py
tests/unit/data/: test_coingecko_client.py  test_data.py  test_providers.py
tests/unit/engine/: test_nsga2.py
tests/unit/factors/: test_factors.py  test_primitives.py
tests/unit/fitness/: test_fitness.py  test_lookahead_guard.py
tests/unit/gp/: test_gp.py
tests/unit/reporting/: test_reporting.py
tests/unit/validation/: test_permutation.py  test_validation.py
