[project]
name = "factor_mining"
version = "2.1.0"
description = "AI-powered factor mining system via Genetic Programming for crypto markets"
requires-python = ">=3.12"
dependencies = [
    "deap==1.4.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.13,<2.0",
    "ccxt>=4.3,<5.0",
    "httpx>=0.27,<1.0",
    "tenacity>=8.3,<9.0",
    "pyarrow>=16.0,<18.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
    "matplotlib>=3.9,<4.0",
    "statsmodels>=0.14,<1.0",
    "typing-extensions>=4.12,<5.0",
    "python-dateutil>=2.9,<3.0",
    "filelock>=3.13,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-mock>=3.12",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# Production pipeline entry point. Exposed as the `factor-mining` console
# script after `pip install -e .` — see `src/factor_mining/cli.py:main`.
# This supersedes the legacy `python run_pipeline.py ...` invocation
# (run_pipeline.py now delegates to cli.main).
[project.scripts]
factor-mining = "factor_mining.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
